--- a/src/Editor_cpp/OSRE_Ed.rc
+++ b/src/Editor_cpp/OSRE_Ed.rc
@@ -50,12 +50,13 @@ END
 // Dialog
 //
 
-IDD_LOGVIEW DIALOGEX 0, 0, 1103, 165
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_LOGVIEW DIALOGEX 0, 0, 1103, 166
+STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Output"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_EDIT1,"RichEdit20A",ES_MULTILINE | ES_READONLY | WS_BORDER | WS_TABSTOP,7,7,1089,151
+    CONTROL         "",IDC_EDIT1,"RichEdit20A",ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_BORDER | WS_VSCROLL | WS_TABSTOP,15,7,1081,152
 END
 
 
@@ -72,7 +73,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 1096
         TOPMARGIN, 7
-        BOTTOMMARGIN, 158
+        BOTTOMMARGIN, 159
     END
 END
 #endif    // APSTUDIO_INVOKED
