--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contrib/assimp"]
 	path = contrib/assimp
 	url = https://github.com/assimp/assimp.git
+[submodule "contrib/stb"]
+	path = contrib/stb
+	url = https://github.com/nothings/stb.git
