Fix pieline test

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -13,10 +13,16 @@ SET ( 01_modelloading_src
     01_ModelLoading/README.md
 )
 
+SET ( 02_UIDemo_src
+	02_UIDemo/UIDemo.cpp
+	02_UIDemo/README.md
+)
+
 SET ( 03_instancing_src
 	03_Instancing/Instancing.cpp
 	03_Instancing/README.md
 )
+
 
 ADD_EXECUTABLE( HelloWorld
     ${00_helloworld_src}
@@ -30,15 +36,21 @@ ADD_EXECUTABLE( Instancing
     ${03_instancing_src}
 )
 
+ADD_EXECUTABLE(UIDemo
+    ${03_instancing_src}
+)
+
 link_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/glew/Debug
     ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/glew/Release
 )
 
-target_link_libraries ( HelloWorld   osre )
-target_link_libraries ( ModelLoading osre ) 
-target_link_libraries ( Instancing   osre )
+target_link_libraries(HelloWorld   osre)
+target_link_libraries(ModelLoading osre)
+target_link_libraries(UIDemo       osre)
+target_link_libraries(Instancing   osre)
 
-set_target_properties( HelloWorld   PROPERTIES FOLDER Samples )
-set_target_properties( ModelLoading PROPERTIES FOLDER Samples )
-set_target_properties( Instancing   PROPERTIES FOLDER Samples )
+set_target_properties(HelloWorld   PROPERTIES FOLDER Samples)
+set_target_properties(ModelLoading PROPERTIES FOLDER Samples)
+set_target_properties(UIDemo       PROPERTIES FOLDER Samples)
+set_target_properties(Instancing   PROPERTIES FOLDER Samples)
