Fix naming of contribution libs folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,5 +155,5 @@ ENDIF( OSRE_BUILD_DOC )
 IF ( OSRE_BUILD_DOC )  
   set_target_properties(  doc                PROPERTIES FOLDER Documentation )
 ENDIF( OSRE_BUILD_DOC )
-set_target_properties(  cppcore            PROPERTIES FOLDER ThirdParty )
-set_target_properties(  assimp             PROPERTIES FOLDER ThirdParty )
+set_target_properties(  cppcore            PROPERTIES FOLDER Contrib )
+set_target_properties(  assimp             PROPERTIES FOLDER Contrib )
