Editor: Separate win32-specific code.

--- a/src/Editor_cpp/CMakeLists.txt
+++ b/src/Editor_cpp/CMakeLists.txt
@@ -32,6 +32,8 @@ SET( modules_src
 )
 
 SET( gui_src
+    src/Gui/UIElementsWin32.h
+    src/Gui/UIElementsWin32.cpp
     src/Gui/UIElements.cpp
     src/Gui/UIElements.h
 )
