Adapt new cppcore namespace to code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ ENDIF(OSRE_BUILD_SAMPLES)
 
 ADD_SUBDIRECTORY( contrib/glew )
 
-set(CPPCORE_BUILD_UNITTESTS OFF CACHE BOOL "no cppcore unittests")
+set(cppcore_BUILD_UNITTESTS OFF CACHE BOOL "no cppcore unittests")
 ADD_SUBDIRECTORY( contrib/cppcore )
 ADD_SUBDIRECTORY( contrib/unzip )
 
