--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contrib/stb"]
 	path = contrib/stb
 	url = https://github.com/nothings/stb.git
+[submodule "imgui"]
+	path = contrib/imgui
+	url = https://github.com/ocornut/imgui.git
