--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ INCLUDE_DIRECTORIES( BEFORE
 )
 
 if( "${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)" OR "${CMAKE_GENERATOR}" MATCHES "16 2019" OR "${CMAKE_GENERATOR}" MATCHES "15 2017" OR "${CMAKE_GENERATOR}" MATCHES "17 2022")
-        ${CMAKE_HOME_DIRECTORY}/contrib/sdl2/lib/x64
+    link_directories(
+	${CMAKE_HOME_DIRECTORY}/contrib/sdl2/lib/x64
     )
 else()
     link_directories(
