Add hunter loading for sdl2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,19 @@
 message(STATUS "The CMake version used is ${CMAKE_VERSION}")
 cmake_minimum_required(VERSION 3.5...${CMAKE_VERSION})
+include("cmake/HunterGate.cmake")
+
+# Todo: we need to solve this more cleaner
+IF (WIN32)
+    HunterGate(
+        URL "https://github.com/cpp-pm/hunter/archive/v0.24.0.tar.gz"
+        SHA1 "a3d7f4372b1dcd52faa6ff4a3bd5358e1d0e5efd"
+    )
+ELSE()
+    HunterGate(
+        URL "https://github.com/ruslo/hunter/archive/v0.23.111.tar.gz"
+        SHA1 "4189bbd869abe4eb69b5303d3f916c03d34dc154"
+    )
+ENDIF()
 
 PROJECT( osre )
 set ( OSRE_VERSION_MAJOR 0 )
@@ -26,6 +40,7 @@ OPTION( OSRE_BUILD_DOC
   OFF
 )
 
+hunter_add_package(SDL2)
 find_package(SDL2 REQUIRED)
 
 # Cache these to allow the user to override them manually.
