--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -401,40 +401,39 @@ SET( threading_src
 #==============================================================================
 # Defined Source groups
 #==============================================================================
-SOURCE_GROUP( App                 FILES ${app_src} )
-SOURCE_GROUP( Animation           FILES ${animation_src} )
-SOURCE_GROUP( Assets              FILES ${assets_src} )
-SOURCE_GROUP( Common              FILES ${common_src} )
-SOURCE_GROUP( Components          FILES ${components_src} )
-SOURCE_GROUP( Debugging           FILES ${debugging_src} )
-SOURCE_GROUP( Debugging\\Win32    FILES ${debugging_windows_src} )
-SOURCE_GROUP( IO                  FILES ${io_src} )
-SOURCE_GROUP( Math                FILES ${math_src} )
-SOURCE_GROUP( Memory              FILES ${memory_src} )
-SOURCE_GROUP( Modules             FILES ${modules_src} )
-SOURCE_GROUP( Platform            FILES ${platform_src} )
-SOURCE_GROUP( Platform\\Win32     FILES ${platform_impl_src} )
-SOURCE_GROUP( Platform\\sdl2      FILES ${platform_sdl2_src} )
-SOURCE_GROUP( Profiling           FILES ${profiling_src} )
-SOURCE_GROUP( Properties          FILES ${properties_src} )
-SOURCE_GROUP( RenderBackend       FILES ${renderbackend_src} )
-SOURCE_GROUP( RenderBackend\\OGLRenderer    FILES ${renderbackend_oglrenderer_src} )
-SOURCE_GROUP( RenderBackend\\Shader       FILES ${renderbackend_shader_src})
-SOURCE_GROUP( Resources           FILES ${resources_src} )
-SOURCE_GROUP( Scene               FILES ${scene_src} )
-SOURCE_GROUP( Threading           FILES ${threading_src} )
-SOURCE_GROUP( WinManager          FILES ${winmanager_src} )
-SOURCE_GROUP( UI\\Common          FILES ${ui_common_src} )
-
-SOURCE_GROUP( Include\\osre\\App        FILES ${app_inc} )
-SOURCE_GROUP( Include\\osre\\Animation  FILES ${animation_inc} )
-SOURCE_GROUP( Include\\osre\\Assets     FILES ${assets_inc} )
-SOURCE_GROUP( Include\\osre\\Debugging  FILES ${debugging_inc} )
-SOURCE_GROUP( Include\\osre\\Common     FILES ${common_inc} )
-SOURCE_GROUP( Include\\osre\\Debugging  FILES ${debugging_inc} )
-SOURCE_GROUP( Include\\osre\\System     FILES ${system_inc} )
-SOURCE_GROUP( Include\\osre\\Utils      FILES ${utils_inc} )
-SOURCE_GROUP( Include\\osre\\IO         FILES ${io_inc} )
+SOURCE_GROUP( App                              FILES ${app_src} )
+SOURCE_GROUP( Animation                        FILES ${animation_src} )
+SOURCE_GROUP( Assets                           FILES ${assets_src} )
+SOURCE_GROUP( Common                           FILES ${common_src} )
+SOURCE_GROUP( Components                       FILES ${components_src} )
+SOURCE_GROUP( Debugging                        FILES ${debugging_src} )
+SOURCE_GROUP( Debugging\\Win32                 FILES ${debugging_windows_src} )
+SOURCE_GROUP( IO                               FILES ${io_src} )
+SOURCE_GROUP( Math                             FILES ${math_src} )
+SOURCE_GROUP( Memory                           FILES ${memory_src} )
+SOURCE_GROUP( Modules                          FILES ${modules_src} )
+SOURCE_GROUP( Platform                         FILES ${platform_src} )
+SOURCE_GROUP( Platform\\Win32                  FILES ${platform_impl_src} )
+SOURCE_GROUP( Platform\\sdl2                   FILES ${platform_sdl2_src} )
+SOURCE_GROUP( Profiling                        FILES ${profiling_src} )
+SOURCE_GROUP( Properties                       FILES ${properties_src} )
+SOURCE_GROUP( RenderBackend                    FILES ${renderbackend_src} )
+SOURCE_GROUP( RenderBackend\\OGLRenderer       FILES ${renderbackend_oglrenderer_src} )
+SOURCE_GROUP( RenderBackend\\Shader            FILES ${renderbackend_shader_src})
+SOURCE_GROUP( Resources                        FILES ${resources_src} )
+SOURCE_GROUP( Scene                            FILES ${scene_src} )
+SOURCE_GROUP( Threading                        FILES ${threading_src} )
+SOURCE_GROUP( WinManager                       FILES ${winmanager_src} )
+SOURCE_GROUP( UI\\Common                       FILES ${ui_common_src} )
+SOURCE_GROUP( Include\\osre\\App               FILES ${app_inc} )
+SOURCE_GROUP( Include\\osre\\Animation         FILES ${animation_inc} )
+SOURCE_GROUP( Include\\osre\\Assets            FILES ${assets_inc} )
+SOURCE_GROUP( Include\\osre\\Debugging         FILES ${debugging_inc} )
+SOURCE_GROUP( Include\\osre\\Common            FILES ${common_inc} )
+SOURCE_GROUP( Include\\osre\\Debugging         FILES ${debugging_inc} )
+SOURCE_GROUP( Include\\osre\\System            FILES ${system_inc} )
+SOURCE_GROUP( Include\\osre\\Utils             FILES ${utils_inc} )
+SOURCE_GROUP( Include\\osre\\IO                FILES ${io_inc} )
 SOURCE_GROUP( Include\\osre\\Math              FILES ${math_inc} )
 SOURCE_GROUP( Include\\osre\\Memory            FILES ${memory_inc} )
 SOURCE_GROUP( Include\\osre\\Modules           FILES ${modules_inc} )
@@ -452,7 +451,7 @@ SOURCE_GROUP( Documentation                    FILES ${doc_inc} )
 add_definitions( -D${USE_PLATFORM} )
 
 #==============================================================================
-# Define the Infrastructure library
+# Define the Infrastructure Library
 #==============================================================================
 ADD_LIBRARY( osre SHARED
     ../../README.md
