Do not use SDL2 linkage for Engine dll

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -24,7 +24,7 @@ if( NOT USE_PLATFORM MATCHES "VK_USE_PLATFORM_.*" )
 endif()
 
 IF( WIN32 )
-    SET( platform_libs comctl32.lib Winmm.lib opengl32.lib glu32.lib Shcore.lib SDL2::SDL2 )
+    SET( platform_libs comctl32.lib Winmm.lib opengl32.lib glu32.lib Shcore.lib )
 ELSE( WIN32 )
     SET( platform_libs SDL2 )
 ENDIF( WIN32 )
@@ -507,4 +507,3 @@ ADD_LIBRARY( osre SHARED
 
 target_link_libraries ( osre cppcore zlibstatic Unzip glew ${platform_libs} assimp )
 set_target_properties(  osre PROPERTIES FOLDER Engine )
-
